--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,7 @@ html {
 }
 
 body {
-	font-family: 'Open sans', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 1em;
 	color: #e2e3ed;
 }
@@ -102,7 +102,7 @@ h1,
 h2,
 h3,
 h4 {
-	font-family: 'Poppins', Helvetica, Arial, sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 
 h1 {
@@ -129,6 +129,61 @@ nav {
   font-size: 1.125rem;
   font-weight: bold;
 }
+
+header,
+main,
+footer {
+  display: flex;
+  justify-content: center;
+}
+
+.content-wrapper {
+	max-width: 1200px;
+	width: 90%;
+	display: flex;
+	justify-content: center;
+	flex-flow: row wrap;
+}
+
+/******** HEADER STYLES ********/
+header {
+	text-align: center;
+}
+
+#logo-container {
+	justify-content: center;
+	width: 100%;
+  border-bottom: 2px #3a3a3a solid;
+}
+
+header img {
+	justify-content: center;
+	width: 50%;
+  padding: 20px 40px;
+}
+
+header nav {
+	justify-content: center;
+	flex-flow: row wrap;
+  width: 50%;
+}
+
+header nav ul {
+  display: flex;
+  justify-content: space-between;		
+}
+
+header nav ul li {
+	text-transform: uppercase;
+	list-style: none;
+}
+
+header nav ul li a {
+	text-decoration: none;
+  color: #e2e3ed;
+}
+
+
 
 /**input text here --form**/
 
